terraform/manifests/deployment.yaml
# kind: Namespace
# apiVersion: v1
# metadata:
#     name: backend

# ---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server
    # namespace: backend
    labels:
        app: server
spec:
    replicas: 2
    selector:
        matchLabels:
            app: server
    strategy:
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: server
        spec:
            containers:
                - name: server
                  image: europe-west3-docker.pkg.dev/secret-meridian-358615/prodapp/prod-api
                  ports:
                      - containerPort: 9000
                  livenessProbe:
                      httpGet:
                          path: "/health-check"
                          port: 9000
                      initialDelaySeconds: 10
                      timeoutSeconds: 5

                  resources:
                      limits:
                          cpu: 200m
                          memory: 100Mi

---
apiVersion: v1
kind: Service
metadata:
    name: backend-service
    # namespace: backend
spec:
    ports:
        - port: 9000
          protocol: TCP
          targetPort: 9000

    selector:
        app: server
