terraform/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-resource
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
        nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
    rules:
        - host: "34.159.234.164.nip.io"
          http:
              paths:
                  - pathType: Prefix
                    path: /api(/|$)(.*)
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 9000
                #   - pathType: Prefix
                #     path: /end(/|$)(.*)
                #     backend:
                #         service:
                #             name: end-service
                #             port:
                #                 number: 9000
